src/app/content/homepage/products/products.component.css
img
{
  object-fit: cover;
  width: 95%;
  height: 120px;
}

.in-line {
  display: inline-block;
  width: 180px;
  height: 400px;
  margin: 1em;
  vertical-align: top;
  outline: none;
}

.in-line:enabled {
  outline: none;
}

.delivery-method {
  font-size: 0.6em;
}

.card-content {
  padding: 0px;
  padding-top: 5px;
  transition: 0.5s;
}

.card-content:hover {
  box-shadow: 0 0 20px grey;
  margin-top: -10px;
}

.product-title {
  height: 20px;
  font-size: 0.85em;
}

.product-link {
  width: 100%;
}

.load-more {
  margin-bottom: 40px;
}

.thumbnail {
  visibility: hidden;
}

.delivery-icon {
  width: 25px;
  height: auto;
}

.category-icon {
  font-size: 2em;
  color: var(--KTKP-GREEN);
}

@media screen and (max-width: 768px) {
  .in-line {
    display: flex;
    width: 90%;
    height: auto;
    margin: auto;
    margin-bottom: 60px;
  }

  .inline-mobile {
    display: inline;
  }

  .inline-mobile img {
    vertical-align: middle;
    margin-left: 5px;
  }

  .card {
    width: 100%;
  }

  .delivery-method {
    font-size: 0.8em;
  }
}

